Update note04, note07

--- a/note/note04.tex
+++ b/note/note04.tex
@@ -1923,7 +1923,7 @@
 \end{prf}
 
 \begin{rmk}
-  上式令 $t\to 0+$ 得 $\ds\int_0^\infty\frac{\sin x}{x}\,\mathrm{d}x = \frac{\pi}{2}$.
+  上式令 $t\to 0+$ 得 $\ds\int_0^\infty\frac{\sin x}{x}\,\mathrm{d}x = \frac{\pi}{2}$; 由變數變換 $\ds u = ax$ 得 $\ds\int_0^\infty\frac{\sin a x}{x}\,\mathrm{d}x = \frac{\pi}{2}\sgn(a)$, $\forall\,a\ne 0$.
 \end{rmk}
 
 \begin{ex}
