--- a/note/note07.tex
+++ b/note/note07.tex
@@ -359,9 +359,10 @@
   \begin{multicols}{3}
     \begin{enumerate}\setlength{\itemsep}{0pt}
       \item $\ds\int_2^3\!\int_1^5\!(x + 2y)\,\text{d}x\,\text{d}y$
-      \item $\ds\int_0^{\frac{\pi}{2}}\!\int_0^{\cos y}\!e^x\sin y\,\text{d}x\,\text{d}y$
-      \item $\ds\int_{-\pi}^{\pi}\!\int_0^2 r\sin\theta\,\text{d}r\,\text{d}\theta$
+      %\item $\ds\int_{-\pi}^{\pi}\!\int_0^2 r\sin\theta\,\text{d}r\,\text{d}\theta$
       \item $\ds\int_0^{\ln 4}\!\!\int_0^{\ln 3}\!\!e^{x + y}\,\text{d}x\,\text{d}y$
+      \item $\ds\int_0^1\!\int_0^1\frac{xy}{\sqrt{x^2 + y^2 + 1}}\,\text{d}y\,\text{d}x$
+      \item $\ds\int_0^{\frac{\pi}{2}}\!\int_0^{\cos y}\!e^x\sin y\,\text{d}x\,\text{d}y$
       \item $\ds\int_0^{\frac{\pi}{2}}\!\int_0^{\cos\theta}\!\!\rho^2\sin\theta\,\text{d}\rho\,\text{d}\theta$
       \item $\ds\int_0^1\!\int_{x^2}^{x^3}\!(x^2 + y^2)\,\text{d}y\,\text{d}x$
       \item $\ds\int_1^2\!\int_0^y\!x\sqrt{y^2 - x^2}\,\text{d}x\,\text{d}y$
@@ -376,8 +377,9 @@
   \begin{enumerate}\setlength{\itemsep}{0pt}
     \item[]
     \item $\ds\int_2^3\!\int_1^5\!(x + 2y)\,\text{d}x\,\text{d}y = \int_2^3\!\Big(\frac{x^2}{2} + 2yx\Big)\,\Big|_1^5\,\text{d}y = \int_2^3\!(12 + 8y)\,\text{d}y = (12y + 4y^2)\,\Big|_2^3 = 32$
-    \item $\ds\int_{-\pi}^{\pi}\!\int_0^2 r\sin\theta\,\text{d}r\,\text{d}\theta = \bigg(\int_{-\pi}^{\pi}\!\sin\theta\,\text{d}\theta\bigg)\cdot\bigg(\int_0^2 r\,\text{d}r\bigg) = 0$
+    %\item $\ds\int_{-\pi}^{\pi}\!\int_0^2 r\sin\theta\,\text{d}r\,\text{d}\theta = \bigg(\int_{-\pi}^{\pi}\!\sin\theta\,\text{d}\theta\bigg)\cdot\bigg(\int_0^2 r\,\text{d}r\bigg) = 0$
     \item $\ds\int_0^{\ln 4}\!\!\int_0^{\ln 3}\!\!e^{x + y}\,\text{d}x\,\text{d}y = \bigg(\int_0^{\ln 4}\!\!e^{y}\,\text{d}y\bigg)\cdot\bigg(\int_0^{\ln 3}\!\!e^x\,\text{d}x\bigg) = (4 - 1)(3 - 1) = 6$
+    \item $\ds\int_0^1\!\int_0^1\frac{xy}{\sqrt{x^2 + y^2 + 1}}\,\text{d}y\,\text{d}x = \int_0^1\!x\bigg(\int_0^1\frac{y}{\underbrace{\sqrt{x^2 + y^2 + 1}}_{\text{令 }\;u = y^2 + x^2 + 1,\;\mathrm{d}u = 2y\mathrm{d}y}}\,\text{d}y\bigg)\text{d}x = \int_0^1\!x\bigg(\frac{1}{2}\int_{x^2 + 1}^{x^2 + 2}\frac{1}{\sqrt{u}}\,\text{d}u\bigg)\text{d}x \\= \int_0^1 x(\sqrt{x^2 + 2} - \sqrt{x^2 + 1})\,\mathrm{d}x = \int_0^1 x\underbrace{\sqrt{x^2 + 2}}_{\text{令}u = x^2 + 2}\,\mathrm{d}x - \int_0^1x\underbrace{\sqrt{x^2 + 1}}_{\text{令}\;u = x^2 + 1}\,\mathrm{d}x = \sqrt{3} - \frac{4}{3}\sqrt{2} + \frac{1}{3}$
     \item $\ds\int_0^{\frac{\pi}{2}}\!\int_0^{\cos y}\!e^x\sin y\,\text{d}x\,\text{d}y = \int_0^{\frac{\pi}{2}}\!\sin y\,\bigg(\int_0^{\cos y}\!e^x\,\text{d}x\bigg)\,\text{d}y = \int_0^{\frac{\pi}{2}}\!\sin y\,(e^{\cos y} - 1)\,\text{d}y = \big(-e^{\cos y} + \cos y\big)\,\Big|_0^{\frac{\pi}{2}} = e - 2$
     \item $\ds\int_0^{\frac{\pi}{2}}\!\int_0^{\cos\theta}\!\!\rho^2\sin\theta\,\text{d}\rho\,\text{d}\theta = \int_0^{\frac{\pi}{2}}\!\sin\theta\,\bigg(\int_0^{\cos\theta}\!\!\rho^2\,\text{d}\rho\bigg)\,\text{d}\theta = \int_0^{\frac{\pi}{2}}\!\sin\theta\,\frac{\cos^3\theta}{3}\,\text{d}\theta = -\frac{\cos^4\theta}{12}\,\bigg|_0^{\frac{\pi}{2}} = \frac{1}{12}$
     \item $\ds\int_0^1\!\int_{x^2}^{x^3}\!(x^2 + y^2)\,\text{d}y\,\text{d}x = \int_0^1\!\bigg(x^2y + \frac{y^3}{3}\bigg)\,\bigg|_{y = x^2}^{y = x^3}\,\text{d}x = \int_0^1\!\bigg(x^2\cdot x^3 + \frac{x^9}{3} - x^2\cdot x^2 - \frac{x^6}{3}\bigg)\,\text{d}x = -\frac{1}{21}$ %\\= \bigg(\frac{x^6}{6} + \frac{x^{10}}{30} - \frac{x^5}{5} - \frac{x^7}{21}\bigg)\,\bigg|_0^1 = -\frac{1}{21}$
