--- a/note/note04.tex
+++ b/note/note04.tex
@@ -1883,7 +1883,7 @@
 \end{ex}
 
 \begin{prf}
-  令 $\ds F(b) = \int_0^{\infty}\!\!e^{-ax^2}\!\cos bx\,\mathrm{d}x$, 則 $\ds F(0) = \frac{1}{2}\sqrt{\frac{\pi}{a}}$; $\ds F'(b) = -\int_0^{\infty}\!\!x\,e^{-ax^2}\!\sin bx\,\mathrm{d}x$. 令 $\ds u = \sin bx$, 則 $\ds \mathrm{d}u = b\cos bx$; $\ds \mathrm{d}v = -xe^{-ax^2}\,\mathrm{d}x$, 則 $\ds v = \frac{1}{2a}e^{-ax^2}$; 故 $\ds F'(b) = \sin bx\cdot\frac{1}{2a}e^{-ax^2}\,\Big|_{x =0}^{x = \infty} - \frac{b}{2a}\int_0^{\infty}\!\!e^{-ax^2}\!\cos bx\,\mathrm{d}x = - \frac{b}{2a}F(b)$ $\ie$ $\ds F(b) = F(0)\,e^{-\frac{b^2}{4a}}$. 
+  令 $\ds F(t) = \int_0^{\infty}\!\!e^{-ax^2}\!\cos tx\,\mathrm{d}x$, 則 $\ds F(0) = \frac{1}{2}\sqrt{\frac{\pi}{a}}$; $\ds F'(t) = -\int_0^{\infty}\!\!x\,e^{-ax^2}\!\sin tx\,\mathrm{d}x$. 令 $\ds u = \sin tx$, 則 $\ds \mathrm{d}u = t\cos tx\,\mathrm{d}x$; $\ds \mathrm{d}v = -xe^{-ax^2}\,\mathrm{d}x$, 則 $\ds v = \frac{1}{2a}e^{-ax^2}$; 故 $\ds F'(t) = \sin tx\cdot\frac{1}{2a}e^{-ax^2}\,\Big|_{x =0}^{x = \infty} - \frac{t}{2a}\int_0^{\infty}\!\!e^{-ax^2}\!\cos tx\,\mathrm{d}x = - \frac{t}{2a}F(t)$ $\ie$ $\ds\int_0^b\frac{F'(t)}{F(t)}\,\mathrm{d}t = -\frac{1}{2a}\int_0^b t\,\mathrm{d}t$ $\ie$ $\ds\ln F(t)\,\Big|_0^b = -\frac{b^2}{4a}$ $\ie$ $\ds F(b) = F(0)\,e^{-\frac{b^2}{4a}} = \frac{1}{2}\sqrt{\frac{\pi}{a}}\,e^{-\frac{b^2}{4a}}$. 
 \end{prf}
 
 \begin{ex}
@@ -1903,7 +1903,7 @@
 \begin{prf}
   令 $\ds F(t) = \int_0^\infty\!\!e^{-ax^2 - \frac{t}{x^2}}\,\mathrm{d}x$, $t > 0$, 則 $\ds F(0) = \frac{1}{2}\sqrt{\frac{\pi}{a}}$;
   %$\ds\frac{\partial F}{\partial a} = -\frac{2a}{x^2} e^{-x^2 - \frac{a^2}{x^2}}$; $\forall\,a \in [0, A]$, $x > 0$, $\ds e^{-x^2 - \frac{a^2}{x^2}}\leqslant e^{-x^2}$ 且 $\ds\frac{2a}{x^2}\leqslant\frac{2A}{x^2}$. $\forall\,x \geqslant 1$, $\ds\left|\frac{\partial f}{\partial a}\right|\leqslant 2A e^{-x^2}$. $\forall\,x \in (0,1)$, $\ds\left|\frac{\partial f}{\partial a}\right| \leqslant \frac{2A}{x^2} e^{-a^2/x^2}$, 積分收斂.
-  $\ds F'(t) = - \int_0^\infty\!\frac{e^{-ax^2 - \frac{t}{x^2}}}{x^2}\,\mathrm{d}x$. 變數變換 $\ds u = \sqrt{\frac{t}{a}}\,\frac{1}{x}$, 則 $\ds x = \sqrt{\frac{t}{a}}\,\frac{1}{u}$, $\ds-\sqrt{\frac{a}{t}}\,\mathrm{d}u = \frac{\mathrm{d}x}{x^2}$, 積分範圍 $x$ 從 $0+$ 到 $\infty$, 則 $\ds u = \sqrt{\frac{t}{a}}\,\frac{1}{x}$ 從 $\infty$ 到 $0$, $\ds F'(t) = \int_0^\infty\!\frac{e^{-ax^2 - \frac{t}{x^2}}}{x^2}\,\mathrm{d}x = \int_\infty^0\!e^{-a\cdot\frac{t}{a}\cdot\frac{1}{u^2} - t\cdot\frac{a}{t}\cdot u^2}(-)\sqrt{\frac{a}{t}}\,\mathrm{d}u = \sqrt{\frac{a}{t}}\int_0^\infty\!\!e^{-\frac{t}{u^2} - au^2}\,\mathrm{d}u = \sqrt{\frac{a}{t}}\,F(t)$ $\ie$ $\ds\int_0^b\!\frac{F'(t)}{F(t)}\,\mathrm{d}t = \sqrt{a}\int_0^b\!\frac{1}{\sqrt{t}}\,\mathrm{d}t$ $\ie$ $\ds\ln F(t)\,\Big|_0^b = -2\sqrt{ab}$ $\ie$ $\ds F(b) = F(0)\,e^{-2\sqrt{ab}} = \frac{1}{2}\sqrt{\frac{\pi}{a}}\,e^{-2\sqrt{ab}}$. 
+  $\ds F'(t) = - \int_0^\infty\!\frac{e^{-ax^2 - \frac{t}{x^2}}}{x^2}\,\mathrm{d}x$. 變數變換 $\ds u = \sqrt{\frac{t}{a}}\,\frac{1}{x}$, 則 $\ds x = \sqrt{\frac{t}{a}}\,\frac{1}{u}$, $\ds-\sqrt{\frac{a}{t}}\,\mathrm{d}u = \frac{\mathrm{d}x}{x^2}$, 積分範圍 $x$ 從 $0+$ 到 $\infty$, 則 $\ds u = \sqrt{\frac{t}{a}}\,\frac{1}{x}$ 從 $\infty$ 到 $0$, $\ds F'(t) = -\int_0^\infty\!\frac{e^{-ax^2 - \frac{t}{x^2}}}{x^2}\,\mathrm{d}x = -\int_\infty^0\!e^{-a\cdot\frac{t}{a}\cdot\frac{1}{u^2} - t\cdot\frac{a}{t}\cdot u^2}(-)\sqrt{\frac{a}{t}}\,\mathrm{d}u = -\sqrt{\frac{a}{t}}\int_0^\infty\!\!e^{-\frac{t}{u^2} - au^2}\,\mathrm{d}u = -\sqrt{\frac{a}{t}}\,F(t)$ $\ie$ $\ds\int_0^b\!\frac{F'(t)}{F(t)}\,\mathrm{d}t = -\sqrt{a}\int_0^b\!\frac{1}{\sqrt{t}}\,\mathrm{d}t$ $\ie$ $\ds\ln F(t)\,\Big|_0^b = -2\sqrt{ab}$ $\ie$ $\ds F(b) = F(0)\,e^{-2\sqrt{ab}} = \frac{1}{2}\sqrt{\frac{\pi}{a}}\,e^{-2\sqrt{ab}}$. 
 \end{prf}
 
 \begin{ex}[Glasser's Master Theorem (GMT)]
@@ -1943,9 +1943,9 @@
 \end{ex}
 
 \begin{prf}
-  令 $\ds F(b) = \int_0^\infty\!\!e^{-ax}\,\frac{\sin bx}{x}\,\mathrm{d}x$, 則 $F(0) = 0$; 
+  令 $\ds F(t) = \int_0^\infty\!\!e^{-ax}\,\frac{\sin tx}{x}\,\mathrm{d}x$, 則 $F(0) = 0$; 
   %$\ds\frac{\partial}{\partial b}\left(e^{-ax}\frac{\sin bx}{x}\right) = e^{-ax}\cos bx$; $\ds\left|e^{-ax}\cos bx\right|\leqslant e^{-ax}$ $\forall\,b$ 且 $\ds\int_0^\infty e^{-ax}\,\mathrm{d}x = \frac{1}{a} < \infty$ 
-  $\ds F'(b) = \int_0^{\infty}\!\!e^{-ax}\cos bx\,\mathrm{d}x = \frac{a}{a^2+b^2}$ $\ie$ $\ds F(b) = \tan^{-1}\frac{b}{a}$. 
+  $\ds F'(t) = \int_0^{\infty}\!\!e^{-ax}\cos tx\,\mathrm{d}x = \frac{a}{t^2+a^2}$ $\ie$ $\ds\int_0^b F'(t)\,\mathrm{d}t = a\int_0^b\frac{\mathrm{d}t}{t^2 + a^2}$ $\ie$ $\ds F(b) - F(0) = \tan^{-1}\!\frac{t}{a}\,\Big|_{t = 0}^{t = b}$ $\ie$ $\ds F(b) = \tan^{-1}\frac{b}{a}$. 
 \end{prf}
 
 \begin{ex}
@@ -1953,9 +1953,9 @@
 \end{ex}
 
 \begin{prf}
-  由 $\ds\sin{ax}\sin{bx} = \frac{\cos{(a-b)x} - \cos{(a+b)x}}{2}$, $\ds\int_0^{\infty} \frac{\sin{ax}\sin{bx}}{x^2}\,\mathrm{d}x = \frac{1}{2}\int_0^\infty\frac{\cos{(a-b)x} - \cos{(a+b)x}}{x^2}\,\mathrm{d}x$. 設 $\ds F(c) = \int_0^\infty\frac{1 - \cos{cx}}{x^2}\,\mathrm{d}x$, 則 $\ds F(0) = 0$. 
+  由 $\ds\sin{ax}\sin{bx} = \frac{\cos{(a-b)x} - \cos{(a+b)x}}{2}$, $\ds\int_0^{\infty} \frac{\sin{ax}\sin{bx}}{x^2}\,\mathrm{d}x = \frac{1}{2}\int_0^\infty\frac{\cos{(a-b)x} - \cos{(a+b)x}}{x^2}\,\mathrm{d}x$. 設 $\ds F(t) = \int_0^\infty\frac{1 - \cos{tx}}{x^2}\,\mathrm{d}x$, 則 $\ds F(0) = 0$. 
 %$\ds\frac{\partial}{\partial c}\frac{1 - \cos{cx}}{x^2} = \frac{\sin{cx}}{x}$. 收斂性由 Dirichlet 積分保證: 對於 $c\neq 0$, $\ds\int_0^\infty\frac{\sin{cx}}{x}\,\mathrm{d}x$ 條件收斂到 $\ds\frac{\pi}{2}\,\mathrm{sgn}(c)$. 
-  $\ds F'(c) = \int_0^{\infty} \frac{\sin{cx}}{x}\,\mathrm{d}x = \frac{\pi}{2}\sgn(c)$, $\ds F(c) = \frac{\pi|c|}{2}$. \\$\ds\int_0^\infty\frac{\cos{(a-b)x} - \cos{(a+b)x}}{x^2}\,\mathrm{d}x = F(a+b) - F(|a-b|) = \frac{\pi(a+b)}{2} - \frac{\pi|a-b|}{2} = \frac{\pi}{2}\cdot 2\min(a,b) = \pi\min(a,b)$, 故 $\ds\int_0^{\infty} \frac{\sin{ax}\sin{bx}}{x^2}\,\mathrm{d}x = \frac{1}{2}\cdot\pi\min(a,b) = \frac{\pi}{2}\min(a,b)$.
+  $\ds F'(t) = \int_0^{\infty} \frac{\sin{tx}}{x}\,\mathrm{d}x = \frac{\pi}{2}\sgn(t)$ $\ie$ $\ds F(t) = \frac{\pi|t|}{2}$. \\$\ds\int_0^\infty\frac{\cos{(a-b)x} - \cos{(a+b)x}}{x^2}\,\mathrm{d}x = F(a+b) - F(a-b) = \frac{\pi(a+b)}{2} - \frac{\pi|a-b|}{2} = \frac{\pi}{2}\cdot 2\min(a,b) = \pi\min(a,b)$, 故 $\ds\int_0^{\infty} \frac{\sin{ax}\sin{bx}}{x^2}\,\mathrm{d}x = \frac{1}{2}\cdot\pi\min(a,b) = \frac{\pi}{2}\min(a,b)$.
 \end{prf}
 
 \begin{ex}
@@ -1963,9 +1963,9 @@
 \end{ex}
 
 \begin{prf}
-  令 $\ds F(a) = \int_0^{\infty}\frac{\sin^2 ax}{x^2}\,\mathrm{d}x$, 則 $F(0) = 0$;
+  令 $\ds F(t) = \int_0^{\infty}\frac{\sin^2 tx}{x^2}\,\mathrm{d}x$, $t > 0$, 則 $F(0) = 0$;
   %$\frac{\partial}{\partial a}\frac{\sin^2 ax}{x^2} = \frac{2\sin ax\cos ax\cdot x}{x^2} = \frac{\sin 2ax}{x}$. $\forall\,a \in [0, A]$, 當 $x \geqslant 1$ 時 $\left|\frac{\sin(2ax)}{x}\right|\leqslant\frac{1}{x}$ 在 $0$ 附近有界, 由 Dirichlet 理論保證積分收斂. 
-  $\ds F'(a) = \int_0^{\infty}\frac{\partial}{\partial a}\Big(\frac{\sin^2 ax}{x^2}\Big)\,\mathrm{d}x = \int_0^{\infty}\frac{2\sin ax\cos ax\cdot x}{x^2}\,\mathrm{d}x = \int_0^{\infty}\frac{\sin 2ax}{x}\,\mathrm{d}x = \frac{\pi}{2}$, 故 $\ds F(a) = \frac{\pi a}{2}$. 
+  $\ds F'(t) = \int_0^{\infty}\frac{\partial}{\partial t}\Big(\frac{\sin^2 tx}{x^2}\Big)\,\mathrm{d}x = \int_0^{\infty}\frac{2\sin tx\cos tx\cdot x}{x^2}\,\mathrm{d}x = \int_0^{\infty}\frac{\sin 2tx}{x}\,\mathrm{d}x = \frac{\pi}{2}$ $\ie$ $\ds\int_0^a F'(t)\,\mathrm{d}t = \frac{\pi}{2}\int_0^a\,\mathrm{d}t$ $\ie$ $\ds F(a) - F(0) = \frac{\pi a}{2}$ $\ie$ $\ds F(a) = \frac{\pi a}{2}$. 
 \end{prf}
 
 \begin{ex}
@@ -1973,7 +1973,7 @@
 \end{ex}
 
 \begin{prf}
-  設 $\ds F(a) = \int_0^{\infty}\frac{1 - \cos ax}{x^2}\,\mathrm{d}x$, 則 $\ds F(0) = 0$; $\ds F'(a) = \int_0^{\infty}\frac{\sin ax}{x}\,\mathrm{d}x = \frac{\pi}{2}$, 故 $\ds F(a) = \frac{\pi a}{2}$, $\ds\int_0^{\infty}\frac{\cos ax - \cos bx}{x^2}\,\mathrm{d}x \\= F(b) - F(a) = \frac{\pi(b-a)}{2}$. 
+  設 $\ds F(t) = \int_0^{\infty}\frac{1 - \cos tx}{x^2}\,\mathrm{d}x$, $t > 0$, 則 $\ds F(0) = 0$; $\ds F'(t) = \int_0^{\infty}\frac{\sin tx}{x}\,\mathrm{d}x = \frac{\pi}{2}$ $\ie$ $\ds\int_0^t F'(\tau)\,\mathrm{d}\tau = \frac{\pi}{2}\int_0^t\,\mathrm{d}\tau$ $\ie$ $\ds F(t) - F(0) = \frac{\pi t}{2}$ $\ie$ $\ds F(t) = \frac{\pi t}{2}$; $\ds\int_0^{\infty}\frac{\cos ax - \cos bx}{x^2}\,\mathrm{d}x = F(b) - F(a) = \frac{\pi(b-a)}{2}$. 
 \end{prf}
 
 \begin{ex}[Frullani 公式]
@@ -1981,11 +1981,11 @@
 \end{ex}
 
 \begin{prf}
-  令 $\ds F(a) = \int_0^\infty \frac{f(ax) - f(bx)}{x}\,\mathrm{d}x$, 則 $F(b) = 0$; 變數變換 $\ds u = ax$, $\ds F'(a) = \int_0^\infty f'(ax)\,\mathrm{d}x = \frac{1}{a}\int_0^\infty f'(u)\,\mathrm{d}u = \frac{1}{a}\big(f(\infty) - f(0+)\big)$. 則 $\ds\int_b^a F'(t)\,\mathrm{d}t = \big(f(\infty) - f(0+)\big)\int_b^a\frac{1}{t}\,\mathrm{d}t$ $\ie$ $\ds F(a) = \big(f(\infty) - f(0+)\big)\ln\frac{a}{b}$.
+  令 $\ds F(t) = \int_0^\infty \frac{f(tx) - f(bx)}{x}\,\mathrm{d}x$, 則 $F(b) = 0$; 變數變換 $\ds u = tx$, $\ds F'(t) = \int_0^\infty\!\!f'(tx)\,\mathrm{d}x = \frac{1}{t}\int_0^\infty\!\!f'(u)\,\mathrm{d}u = \frac{1}{a}\big(f(\infty) - f(0+)\big)$. 則 $\ds\int_b^a\!F'(t)\,\mathrm{d}t = \big(f(\infty) - f(0+)\big)\int_b^a\frac{1}{t}\,\mathrm{d}t$ $\ie$ $\ds F(a) = \big(f(\infty) - f(0+)\big)\ln\frac{a}{b}$.
 \end{prf}
 
 \begin{rmk}
-  $\ds\int_0^\infty\frac{e^{-ax} - e^{-bx}}{x}\,\mathrm{d}x = \ln\frac{b}{a}$, $\ds\int_0^\infty\frac{\tan^{-1} ax - \tan^{-1}bx}{x}\,\mathrm{d}x = \frac{\pi}{2}\ln\frac{a}{b}$ 可分別由 Frullani 公式求得: 分別取 $\ds f(x) = e^{-x}$; $\ds f(0+) = 1$, $\ds f(\infty) = 0$ 及取 $\ds f(x) = \tan^{-1}(x)$; $\ds f(0+) = 0$, $\ds f(\infty) = \frac{\pi}{2}$. 
+  $\ds\int_0^\infty\frac{e^{-ax} - e^{-bx}}{x}\,\mathrm{d}x = \ln\frac{b}{a}$, $\ds\int_0^\infty\frac{\tan^{-1} ax - \tan^{-1}bx}{x}\,\mathrm{d}x = \frac{\pi}{2}\ln\frac{a}{b}$ 可分別由 Frullani 公式求得: 分別取 $\ds f(x) = e^{-x}$; $\ds f(0+) = 1$, $\ds f(\infty) = 0$ 及取 $\ds f(x) = \tan^{-1}x$; $\ds f(0+) = 0$, $\ds f(\infty) = \frac{\pi}{2}$. 
 \end{rmk}
 
 \begin{ex}
