--- a/note/note04.tex
+++ b/note/note04.tex
@@ -186,7 +186,8 @@
           \bottomrule
         \end{tabular}
       \end{table}
-    \item (Liouville) {\color{M4} $\ds e^{-x^2}$, $\ds\frac{e^x}{x}$, $\ds\frac{1}{\ln x}$, $\ds\sin(x^2)$, $\ds\cos(x^2)$, $\ds\frac{\sin x}{x}$, $\ds\frac{\cos x}{x}$, $\ds x^x$ 無 (初等函數形式之) 反導函數！}
+    \item (Liouville) %{\color{M4} 
+      $\ds e^{-x^2}$, $\ds\frac{e^x}{x}$, $\ds\frac{1}{\ln x}$, $\ds\sin(x^2)$, $\ds\cos(x^2)$, $\ds\frac{\sin x}{x}$, $\ds\frac{\cos x}{x}$, $\ds x^x$ 無 (初等函數形式之) 反導函數！%}
   \end{itemize}
 \end{fact}
 
@@ -211,14 +212,23 @@
   \setlength{\columnsep}{-2cm}
   \begin{multicols}{2}
     \begin{enumerate}\setlength{\itemsep}{0pt}
-      \item $\ds\int\!\frac{x^3 - 1}{x^3}\,\text{d}x {\color{C2}\;= x + \frac{1}{2x^3} + c}$
-      \item $\ds\int\!5 - \frac{1}{\sqrt{x}}\,\text{d}x {\color{C2}\;= 5x - 2\sqrt{x} + c}$
-      \item $\ds\int\!(t - 1)(t + 1)\,\text{d}t {\color{C2}\;= \frac{t^3}{3} - t + c}$
-      \item $\ds\int\!(\sqrt{x} + 1)^2\,\text{d}x {\color{C2}\;= \frac{x^2}{2} + x + \frac{4 x^{\frac{3}{2}}}{3} + c}$
-      \item $\ds\int\!x\sqrt{3x}\,\text{d}x {\color{C2}\;= \frac{2\sqrt{3}}{5}\,x^{\frac{5}{2}} + c}$
-      \item $\ds\int\!\frac{1}{x^3} - \frac{1}{x^5}\,\text{d}x {\color{C2}\;= \frac{-1}{2x^2} + \frac{1}{4x^4} + c}$
-      \item $\ds\int\!\sec^2 x - \sec x\tan x\,\text{d}x {\color{C2}\;= \tan x - \sec x + c}$
-      \item $\ds\int\!\frac{e^{3x} + 1}{e^x + 1}\,\text{d}x {\color{C2}\;= \frac{e^{2x}}{2} - e^x + x + c}$
+      %\item $\ds\int\!\frac{x^3 - 1}{x^3}\,\text{d}x {\color{C2}\;= x + \frac{1}{2x^3} + c}$
+      %\item $\ds\int\!5 - \frac{1}{\sqrt{x}}\,\text{d}x {\color{C2}\;= 5x - 2\sqrt{x} + c}$
+      %\item $\ds\int\!(t - 1)(t + 1)\,\text{d}t {\color{C2}\;= \frac{t^3}{3} - t + c}$
+      %\item $\ds\int\!(\sqrt{x} + 1)^2\,\text{d}x {\color{C2}\;= \frac{x^2}{2} + x + \frac{4 x^{\frac{3}{2}}}{3} + c}$
+      %\item $\ds\int\!x\sqrt{3x}\,\text{d}x {\color{C2}\;= \frac{2\sqrt{3}}{5}\,x^{\frac{5}{2}} + c}$
+      %\item $\ds\int\!\frac{1}{x^3} - \frac{1}{x^5}\,\text{d}x {\color{C2}\;= \frac{-1}{2x^2} + \frac{1}{4x^4} + c}$
+      %\item $\ds\int\!\sec^2 x - \sec x\tan x\,\text{d}x {\color{C2}\;= \tan x - \sec x + c}$
+      %\item $\ds\int\!\frac{e^{3x} + 1}{e^x + 1}\,\text{d}x {\color{C2}\;= \frac{e^{2x}}{2} - e^x + x + c}$
+      \item $\ds\int\!\frac{x^3 - 1}{x^3}\,\text{d}x \;= x + \frac{1}{2x^3} + c$
+      \item $\ds\int\!5 - \frac{1}{\sqrt{x}}\,\text{d}x \;= 5x - 2\sqrt{x} + c$
+      \item $\ds\int\!(t - 1)(t + 1)\,\text{d}t \;= \frac{t^3}{3} - t + c$
+      \item $\ds\int\!(\sqrt{x} + 1)^2\,\text{d}x \;= \frac{x^2}{2} + x + \frac{4 x^{\frac{3}{2}}}{3} + c$
+      \item $\ds\int\!x\sqrt{3x}\,\text{d}x \;= \frac{2\sqrt{3}}{5}\,x^{\frac{5}{2}} + c$
+      \item $\ds\int\!\frac{1}{x^3} - \frac{1}{x^5}\,\text{d}x \;= \frac{-1}{2x^2} + \frac{1}{4x^4} + c$
+      \item $\ds\int\!\sec^2 x - \sec x\tan x\,\text{d}x \;= \tan x - \sec x + c$
+      \item $\ds\int\!\frac{e^{3x} + 1}{e^x + 1}\,\text{d}x \;= \frac{e^{2x}}{2} - e^x + x + c$
+
     \end{enumerate} 
   \end{multicols}
 \end{exe}
@@ -1052,7 +1062,7 @@
 %\end{remark}
 
 \begin{thm}[最大最小值定理]
-  若函數在定義域為{\color{M4}有限閉區間}, 或{\color{M4}有限閉區間的有限聯集}連續, 則函數在定義域上有最大值及最小值. 
+  若函數在定義域為{有限閉區間}, 或{有限閉區間的有限聯集}連續, 則函數在定義域上有最大值及最小值. 
 \end{thm}
 
 \subsubsection*{積分均值定理}
@@ -1229,6 +1239,7 @@
       \item $\ds\lim_{x\to 0}\frac{\int_0^x(\sec t - 1)\,\text{d}t}{x^3}$
       \item $\ds\lim_{x\to\infty}\frac{\int_{x^2}^0 e^{t - x^2}(2 t^2 + 1)\,\text{d}t}{x^4}$
       \item $\ds\lim_{x\to 0}\frac{1}{x}\int_0^{\tan x}\!\!f(u)(\sin x - \cos u)\,\text{d}u$, $f$ 為連續函數
+      \item $\ds\lim_{x\to 0}\frac{1}{x}\int_0^x(1 - \tan 2t)^{\frac{1}{t}}\,\mathrm{d}t$
     \end{enumerate}
   \end{multicols}
 \end{ex}
@@ -1239,6 +1250,7 @@
     \item $\ds\lim_{x\to 0}\frac{\int_0^x(\sec t - 1)\,\text{d}t}{x^3} = \lim_{x\to 0}\frac{\sec x - 1}{3x^2} = \lim_{x\to 0}\frac{\sec x\tan x}{6x} = \lim_{x\to 0}\frac{\sec x\tan x\cdot\tan x + \sec x\cdot\sec^2 x}{6} = \frac{1}{6}$. 
     \item $\ds\lim_{x\to\infty}\frac{\int_{x^2}^0 e^{t - x^2}(2 t^2 + 1)\,\text{d}t}{x^4} = \lim_{x\to\infty}\frac{\int_{x^2}^0 e^t(2 t^2 + 1)\,\text{d}t}{e^{x^2}x^4} = \lim_{x\to\infty}\frac{-e^{x^2}(2(x^2)^2 + 1)\cdot 2x}{e^{x^2}\,2x\cdot x^4 + e^{x^2}\cdot 4x^3} = \lim_{x\to\infty}\frac{-(4x^5 + 2x)}{2x^5 + 4x^3} = -2$. 
     \item $\ds\lim_{x\to 0}\frac{1}{x}\int_0^{\tan x}\!\!f(u)(\sin x - \cos u)\,\text{d}u = \lim_{x\to 0}\frac{\int_0^{\tan x}\!f(u)(\sin x - \cos u)\,\text{d}u}{x} \\= \lim_{x\to 0}\frac{\sin x\int_0^{\tan x}\!f(u)\,\text{d}u - \int_0^{\tan x}\!f(u)\cos u\,\text{d}u}{x} \\ = \lim_{x\to 0}\frac{\cos x\int_0^{\tan x}\!f(u)\,\text{d}u + \sin x\cdot f(\tan x)\cdot\sec^2 x - f(\tan x)\cos(\tan x)\cdot\sec^2 x}{1} = -f(0)$
+    \item $\ds \lim_{x \to 0} \frac{\int_0^x (1 - \tan 2t)^{\frac{1}{t}} \, dt}{x} \stackrel{\text{H}}{=} \lim_{x \to 0} \frac{(1 - \tan 2x)^{\frac{1}{x}}}{1} = \exp\left( \lim_{x \to 0} \frac{\ln(1 - \tan 2x)}{x} \right) \stackrel{\text{H}}{=} \exp\left( \lim_{x \to 0} \frac{-2 \sec^2 2x}{1 - \tan 2x} \right) = \exp\left( \frac{-2 \cdot 1^2}{1 - 0} \right) = e^{-2}$
   \end{enumerate}
 \end{sol}
 
@@ -1906,17 +1918,20 @@
   $\ds F'(t) = - \int_0^\infty\!\frac{e^{-ax^2 - \frac{t}{x^2}}}{x^2}\,\mathrm{d}x$. 變數變換 $\ds u = \sqrt{\frac{t}{a}}\,\frac{1}{x}$, 則 $\ds x = \sqrt{\frac{t}{a}}\,\frac{1}{u}$, $\ds-\sqrt{\frac{a}{t}}\,\mathrm{d}u = \frac{\mathrm{d}x}{x^2}$, 積分範圍 $x$ 從 $0+$ 到 $\infty$, 則 $\ds u = \sqrt{\frac{t}{a}}\,\frac{1}{x}$ 從 $\infty$ 到 $0$, $\ds F'(t) = -\int_0^\infty\!\frac{e^{-ax^2 - \frac{t}{x^2}}}{x^2}\,\mathrm{d}x = -\int_\infty^0\!e^{-a\cdot\frac{t}{a}\cdot\frac{1}{u^2} - t\cdot\frac{a}{t}\cdot u^2}(-)\sqrt{\frac{a}{t}}\,\mathrm{d}u = -\sqrt{\frac{a}{t}}\int_0^\infty\!\!e^{-\frac{t}{u^2} - au^2}\,\mathrm{d}u = -\sqrt{\frac{a}{t}}\,F(t)$ $\ie$ $\ds\int_0^b\!\frac{F'(t)}{F(t)}\,\mathrm{d}t = -\sqrt{a}\int_0^b\!\frac{1}{\sqrt{t}}\,\mathrm{d}t$ $\ie$ $\ds\ln F(t)\,\Big|_0^b = -2\sqrt{ab}$ $\ie$ $\ds F(b) = F(0)\,e^{-2\sqrt{ab}} = \frac{1}{2}\sqrt{\frac{\pi}{a}}\,e^{-2\sqrt{ab}}$. 
 \end{prf}
 
-\begin{ex}[Glasser's Master Theorem (GMT)]
+\begin{thm}[Glasser's Master Theorem (GMT)]
   若 $f$ 在 $(-\infty, \infty)$ 可積, $\forall\,c > 0$, $\ds\int_{-\infty}^\infty f\big(x - \frac{c}{x}\big)\,\mathrm{d}x = \int_{-\infty}^\infty f(x)\,\mathrm{d}x$.
-\end{ex}
+\end{thm}
 
 \begin{prf}
   變數變換 $\ds u = x - \frac{c}{x}$, 則 $\ds x^2 - ux - c = 0$ $\ie$ $\ds x = \frac{u + \sqrt{u^2 + 4c}}{2} > 0$ 或 $\ds x = \frac{u - \sqrt{u^2 + 4c}}{2} < 0$, 分別對應 $\ds\mathrm{d}x = \Big(\frac{1}{2} + \frac{u}{\sqrt{u^2 + 4c}}\Big)\mathrm{d}u$ 或 $\ds\mathrm{d}x = \Big(\frac{1}{2} - \frac{u}{\sqrt{u^2 + 4c}}\Big)\,\mathrm{d}u$; 積分範圍 $x$ 分別由 $-\infty$ 至 $0-$, $0+$ 至 $\infty$, $u$ 則分別由 $-\infty$ 至 $\infty$, $-\infty$ 至 $\infty$. 故 $\ds\int_{-\infty}^\infty f\big(x - \frac{c}{x}\big)\,\mathrm{d}x = \int_{-\infty}^{0-} f\big(x - \frac{c}{x}\big)\,\mathrm{d}x + \int_{0+}^\infty f\big(x - \frac{c}{x}\big)\,\mathrm{d}x = \int_{-\infty}^\infty f(u)\Big(\frac{1}{2} + \frac{u}{\sqrt{u^2 + 4c}}\Big)\mathrm{d}u + \int_{-\infty}^\infty f(u)\Big(\frac{1}{2} + \frac{u}{\sqrt{u^2 + 4c}}\Big)\mathrm{d}u = \int_{-\infty}^\infty f(u)\,\mathrm{d}u = \int_{-\infty}^\infty f(x)\,\mathrm{d}x$.
 \end{prf}
 
-\begin{rmk}[使用 GMT]
-  $\ds\int_0^\infty\!\!e^{-ax^2 - \frac{b}{x^2}}\,\mathrm{d}x = \underbrace{\int_0^\infty\!\!e^{-(\sqrt{a}x - \frac{\sqrt{b}}{x})^2 - 2\sqrt{ab}}\,\mathrm{d}x}_{\text{令}\;u = \sqrt{a}x,\; ;\;\frac{\mathrm{d}u}{\sqrt{a}} = \mathrm{d}x} = \frac{e^{-2\sqrt{ab}}}{\sqrt{a}}\!\int_0^\infty\!\!e^{-(u - \frac{\sqrt{ab}}{u})^2}\,\mathrm{d}u = \underbrace{\frac{e^{-2\sqrt{ab}}}{2\sqrt{a}}\!\int_{-\infty}^\infty\!\!e^{-(u - \frac{\sqrt{ab}}{u})^2}\,\mathrm{d}u}_{\text{偶函數},\;\sqrt{ab} > 0;\;\text{符合 GMT}} \\= \frac{e^{-2\sqrt{ab}}}{2\sqrt{a}}\!\int_{-\infty}^\infty\!e^{-u^2}\,\mathrm{d}u = \frac{e^{-2\sqrt{ab}}}{2\sqrt{a}}\cdot\sqrt{\pi} = \frac{1}{2}\sqrt{\frac{\pi}{a}}\,e^{-2\sqrt{ab}}$.
-\end{rmk}
+\begin{ex}[GMT 範例]
+  \begin{itemize}
+    \item $\ds\int_0^\infty\!e^{-ax^2 - \frac{b}{x^2}}\,\mathrm{d}x = \underbrace{\int_0^\infty\!e^{-(\sqrt{a}x - \frac{\sqrt{b}}{x})^2 - 2\sqrt{ab}}\,\mathrm{d}x}_{\text{令}\;u = \sqrt{a}x,\; ;\;\frac{\mathrm{d}u}{\sqrt{a}} = \mathrm{d}x} = \frac{e^{-2\sqrt{ab}}}{\sqrt{a}}\!\int_0^\infty\!e^{-(u - \frac{\sqrt{ab}}{u})^2}\,\mathrm{d}u \\= \underbrace{\frac{e^{-2\sqrt{ab}}}{2\sqrt{a}}\!\int_{-\infty}^\infty\!e^{-(u - \frac{\sqrt{ab}}{u})^2}\,\mathrm{d}u}_{\text{偶函數},\;\sqrt{ab} > 0;\;\text{符合 GMT}} = \frac{e^{-2\sqrt{ab}}}{2\sqrt{a}}\!\int_{-\infty}^\infty\!e^{-u^2}\,\mathrm{d}u = \frac{e^{-2\sqrt{ab}}}{2\sqrt{a}}\cdot\sqrt{\pi} = \frac{1}{2}\sqrt{\frac{\pi}{a}}\,e^{-2\sqrt{ab}}$.
+    \item $\ds\int_{-\infty}^\infty\frac{x^2}{x^4 - 3x^2 + 4}\,\mathrm{d}x = \int_{-\infty}^\infty\frac{1}{\big(x - \frac{2}{x}\big)^2 + 1}\,\mathrm{d}x = \int_{-\infty}^\infty\frac{1}{x^2 + 1}\,\mathrm{d}x = \pi$
+  \end{itemize}
+\end{ex}
 
 \begin{ex}
   若 $a > 0$, 求 $\ds\int_0^\infty\!\!\frac{\mathrm{d}x}{(x^2 + a^2)^2}$, $\ds\int_0^\infty\!\!\frac{\mathrm{d}x}{(x^2 + a^2)^3}$ 並推導 $\ds\int_0^\infty\!\!\frac{\mathrm{d}x}{(x^2 + a^2)^n}$, $n\in\mathbb{N}$.
@@ -1976,9 +1991,9 @@
   設 $\ds F(t) = \int_0^{\infty}\frac{1 - \cos tx}{x^2}\,\mathrm{d}x$, $t > 0$, 則 $\ds F(0) = 0$; $\ds F'(t) = \int_0^{\infty}\frac{\sin tx}{x}\,\mathrm{d}x = \frac{\pi}{2}$ $\ie$ $\ds\int_0^t F'(\tau)\,\mathrm{d}\tau = \frac{\pi}{2}\int_0^t\,\mathrm{d}\tau$ $\ie$ $\ds F(t) - F(0) = \frac{\pi t}{2}$ $\ie$ $\ds F(t) = \frac{\pi t}{2}$; $\ds\int_0^{\infty}\frac{\cos ax - \cos bx}{x^2}\,\mathrm{d}x = F(b) - F(a) = \frac{\pi(b-a)}{2}$. 
 \end{prf}
 
-\begin{ex}[Frullani 公式]
+\begin{thm}[Frullani 公式]
   若 $f$ 在 $(0, \infty)$ 連續, 且 $f(0+)$ 和 $\ds f(\infty) = \lim_{x\to\infty} f(x)$ 都存在且有限, 則 $\forall\,a, b > 0$ $\ds\int_0^\infty \frac{f(ax) - f(bx)}{x}\,\mathrm{d}x = \bigl(f(0+) - f(\infty)\bigr) \ln\frac{b}{a}$.
-\end{ex}
+\end{thm}
 
 \begin{prf}
   令 $\ds F(t) = \int_0^\infty \frac{f(tx) - f(bx)}{x}\,\mathrm{d}x$, 則 $F(b) = 0$; 變數變換 $\ds u = tx$, $\ds F'(t) = \int_0^\infty\!\!f'(tx)\,\mathrm{d}x = \frac{1}{t}\int_0^\infty\!\!f'(u)\,\mathrm{d}u = \frac{1}{a}\big(f(\infty) - f(0+)\big)$. 則 $\ds\int_b^a\!F'(t)\,\mathrm{d}t = \big(f(\infty) - f(0+)\big)\int_b^a\frac{1}{t}\,\mathrm{d}t$ $\ie$ $\ds F(a) = \big(f(\infty) - f(0+)\big)\ln\frac{a}{b}$.
