--- a/note/note04.tex
+++ b/note/note04.tex
@@ -1992,11 +1992,11 @@
 \end{prf}
 
 \begin{thm}[Frullani 公式]
-  若 $f$ 在 $(0, \infty)$ 連續, 且 $f(0+)$ 和 $\ds f(\infty) = \lim_{x\to\infty} f(x)$ 都存在且有限, 則 $\forall\,a, b > 0$ $\ds\int_0^\infty \frac{f(ax) - f(bx)}{x}\,\mathrm{d}x = \bigl(f(0+) - f(\infty)\bigr) \ln\frac{b}{a}$.
+  若 $f$ 在 $(0, \infty)$ 連續, 且 $f(0+)$ 和 $\ds f(\infty) = \lim_{x\to\infty} f(x)$ 都存在且有限, 則 $\forall\,a, b > 0$ $\ds\int_0^\infty \frac{f(ax) - f(bx)}{x}\,\mathrm{d}x = \big(f(\infty) - f(0+)\big)\ln\frac{a}{b}$.
 \end{thm}
 
 \begin{prf}
-  令 $\ds F(t) = \int_0^\infty \frac{f(tx) - f(bx)}{x}\,\mathrm{d}x$, 則 $F(b) = 0$; 變數變換 $\ds u = tx$, $\ds F'(t) = \int_0^\infty\!\!f'(tx)\,\mathrm{d}x = \frac{1}{t}\int_0^\infty\!\!f'(u)\,\mathrm{d}u = \frac{1}{a}\big(f(\infty) - f(0+)\big)$. 則 $\ds\int_b^a\!F'(t)\,\mathrm{d}t = \big(f(\infty) - f(0+)\big)\int_b^a\frac{1}{t}\,\mathrm{d}t$ $\ie$ $\ds F(a) = \big(f(\infty) - f(0+)\big)\ln\frac{a}{b}$.
+  令 $\ds F(t) = \int_0^\infty \frac{f(tx) - f(bx)}{x}\,\mathrm{d}x$, 則 $F(b) = 0$; 變數變換 $\ds u = tx$, $\ds F'(t) = \int_0^\infty\!\!f'(tx)\,\mathrm{d}x = \frac{1}{t}\int_0^\infty\!\!f'(u)\,\mathrm{d}u = \frac{1}{t}\big(f(\infty) - f(0+)\big)$. 則 $\ds\int_b^a\!F'(t)\,\mathrm{d}t = \big(f(\infty) - f(0+)\big)\int_b^a\frac{1}{t}\,\mathrm{d}t$ $\ie$ $\ds F(a) = \big(f(\infty) - f(0+)\big)\ln\frac{a}{b}$.
 \end{prf}
 
 \begin{rmk}
